fix light theme scrollbar color

--- a/styles/light.scss
+++ b/styles/light.scss
@@ -1,11 +1,11 @@
 /* scroll bar */
 .light ::-webkit-scrollbar-track {
-    background: #333;
+    background: #eee;
 }
 
 .light ::-webkit-scrollbar-thumb {
-    background: #555;
-    outline: 0.06125rem solid #555;
+    background: #aaa;
+    outline: 0.06125rem solid #aaa;
 }
 
 .light body {
